base/tempo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tempo
spec:
  selector:
    app: tempo
  ports:
    - name: http
      port: 3200
      targetPort: 3200

    - name: otlp-grpc
      port: 4317
      targetPort: 4317
